UI and major refactoring
Manually styled the health check dashboard, made multiple independent components,

--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,11 @@
 {
-    
+  "app": {
+    "name": "Node.js Starter App",
+    "version": "0.0.1",
+    "healthcheck": {
+      "healthcheckWsEndpoint": "ws://LAPTOP-UMF83CB2:8080/ws-endpoint1",
+      "healthcheckWsTopic": "/topic/healthCheck",
+      "healthcheckRestEndpoint": "https://healthcheck-ib.azurewebsites.net/api/v1/health/check"
+    }
+  }
 }
