--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-icons": "^4.11.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.17.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
