--- a/src/config.json
+++ b/src/config.json
@@ -1,10 +1,10 @@
 {
   "app": {
-    "name": "Node.js Starter App",
+    "name": "Hero",
     "version": "0.0.1",
     "healthcheck": {
       "connectWs": false,
-      "queryIntervalRest": 5,
+      "queryIntervalRest": 10,
       "healthcheckWsEndpoint": "ws://LAPTOP-UMF83CB2:8080/ws-endpoint1",
       "healthcheckWsEndpoint1": "ws://healthcheck-ib.azurewebsites.net:80/ws-endpoint1",
       "healthcheckWsTopic": "/topic/healthCheck",
