--- a/src/config.json
+++ b/src/config.json
@@ -8,7 +8,8 @@
       "healthcheckWsEndpoint": "ws://LAPTOP-UMF83CB2:8080/ws-endpoint1",
       "healthcheckWsEndpoint1": "ws://healthcheck-ib.azurewebsites.net:80/ws-endpoint1",
       "healthcheckWsTopic": "/topic/healthCheck",
-      "healthcheckRestEndpoint": "https://healthcheck-ib.azurewebsites.net/api/v1/health/mock"
+      "healthcheckRestEndpoint": "https://healthcheck-ib.azurewebsites.net/api/v1/health/mock",
+      "healthcheckRestEndpoint2": "https://localhost:8080/api/v1/health/mock"
     }
   }
 }
