--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-bootstrap": "^0.26.6",
     "@types/sockjs-client": "^1.5.3",
     "@types/stompjs": "^2.3.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
