--- a/src/config/config.json
+++ b/src/config/config.json
@@ -21,11 +21,11 @@
     "healthcheck": {
       "connectWs": false,
       "queryIntervalRest": 0,
-      "healthcheckWsEndpoint2": "ws://LAPTOP-UMF83CB2:8080/ws-endpoint1",
-      "healthcheckWsEndpoint": "wss://healthcheck-ib.azurewebsites.net/ws-endpoint1",
+      "healthcheckWsEndpoint": "ws://LAPTOP-UMF83CB2:8080/ws-endpoint1",
+      "healthcheckWsEndpoint_prod": "wss://healthcheck-ib.azurewebsites.net/ws-endpoint1",
       "healthcheckWsTopic": "/topic/healthCheck",
       "healthcheckRestEndpoint": "https://healthcheck-ib.azurewebsites.net/api/v1/health/mock",
-      "healthcheckRestEndpoint2": "https://localhost:8080/api/v1/health/mock"
+      "healthcheckRestEndpoint_dev": "http://LAPTOP-UMF83CB2:8080/api/v1/health/mock"
     }
   }
 }
